# fedi-near-dao

./: README.md  package.json
contract/: Cargo.toml
contract/src/: lib.rs  tests.rs
