[package]
name = "fedidao"
version = "0.1.0"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
secp256k1 = { version = "0.20.3", features = ["bitcoin_hashes"] }
serde = { version = "=1.0.117", features = ["derive"] }
serde_json = "1.0"